* Fixed KDevelop compilation error by adding missing  PartController::setServiceType() method.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
-2002-05-15  Bernd Gehrmann  <bernd@mail.berlios.de>
+2002-05-16  Richard Dale <duke@tipitina.demon.co.uk>
 
+	* Fixed KDevelop compilation error by adding missing 
+         PartController::setServiceType() method.
+
+2002-05-15  Bernd Gehrmann  <bernd@mail.berlios.de>
 	* Big cleanup in class store, see my mail in kdevelop-devel
 	* Fixed persistant class store to not store
 	  namespaced classes twice
@@ -7,11 +11,8 @@
 	  classes from all namespaces, not only the global one
 	* Class combo boxes can show global functions now
 	* Class combo boxes handle namespaced classes now
-
 2002-05-13  Richard Dale <duke@tipitina.demon.co.uk>
-
 	* Added .mm and .M source file extensions for Objective-C++
-
 2002-05-10  Bernd Gehrmann  <bernd@mail.berlios.de>
 	* Put grep into editor context menu
 	* Put 'Lookup in Index' and 'Goto manpage'
